--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.healthapp">
 
-    <uses-permission android:name="android.permission.INTERNET"
-    android:usesCleartextTraffic="true"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,17 +10,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.HealthApp">
+        android:theme="@style/Theme.HealthApp"
+        android:usesCleartextTraffic="true">
+
         <activity
             android:name=".MainActivity"
-            android:exported="false">
-        </activity>
-        <activity
-            android:name=".SignupActivity"
-            android:exported="false">
-        </activity>
-        <activity
-            android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
